--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nrwl/node": "15.9.2",
     "@nrwl/webpack": "15.9.2",
     "@nrwl/workspace": "15.5.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -39,6 +40,7 @@
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^9.0.1",
     "axios": "^1.0.0",
+    "bcrypt": "^5.1.0",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
